--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -12,8 +12,8 @@
 
   "about": {
     "title": "Haqqımızda",
-    "text1": "Ailəmnet Ekspress olaraq məqsədimiz sizə sürətli, etibarlı və keyfiyyətli internet xidməti təqdim etməkdir. Müştərilərimizin gündəlik işlərini, təhsilini və əyləncəsini fasiləsiz və problemsiz şəkildə davam etdirə bilməsi bizim üçün ən önəmli prioritetdir. Bizim komandamız yüksək təcrübəli mütəxəssislərdən ibarətdir və texnologiyanın son yeniliklərini tətbiq edərək hər zaman müştəri məmnuniyyətini təmin etməyə çalışır. Fiber-optik texnologiya ilə təmin etdiyimiz sürətli internet bağlantısı sayəsində həm evlərdə, həm də iş yerlərində problemsiz və stabil bağlantı əldə edə bilərsiniz.",
-    "text2": "Ailəmnet — sürət, keyfiyyət və etibarlılıq deməkdir."
+    "text1": "LEOTELECOM olaraq məqsədimiz sizə sürətli, etibarlı və keyfiyyətli internet xidməti təqdim etməkdir. Müştərilərimizin gündəlik işlərini, təhsilini və əyləncəsini fasiləsiz və problemsiz şəkildə davam etdirə bilməsi bizim üçün ən önəmli prioritetdir. Bizim komandamız yüksək təcrübəli mütəxəssislərdən ibarətdir və texnologiyanın son yeniliklərini tətbiq edərək hər zaman müştəri məmnuniyyətini təmin etməyə çalışır. Fiber-optik texnologiya ilə təmin etdiyimiz sürətli internet bağlantısı sayəsində həm evlərdə, həm də iş yerlərində problemsiz və stabil bağlantı əldə edə bilərsiniz.",
+    "text2": "LEOTELECOM — sürət, keyfiyyət və etibarlılıq deməkdir."
   },
 
   "tariffs": {
