--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,8 +12,8 @@
 
   "about": {
     "title": "About Us",
-    "text1": "As Ailəmnet, our goal is to provide you with fast, reliable, and high-quality internet service. Our top priority is ensuring that our customers can continue their daily work, education, and entertainment without interruptions or problems. Our team consists of highly experienced specialists who constantly strive to ensure customer satisfaction by applying the latest technological innovations. Thanks to the high-speed internet connection we provide through fiber-optic technology, you can enjoy a stable and seamless connection both at home and at work.",
-    "text2": "Ailəmnet — means speed, quality, and reliability."
+    "text1": "As LEOTELECOM, our goal is to provide you with fast, reliable, and high-quality internet service. Our top priority is ensuring that our customers can continue their daily work, education, and entertainment without interruptions or problems. Our team consists of highly experienced specialists who constantly strive to ensure customer satisfaction by applying the latest technological innovations. Thanks to the high-speed internet connection we provide through fiber-optic technology, you can enjoy a stable and seamless connection both at home and at work.",
+    "text2": "LEOTELECOM — means speed, quality, and reliability."
   },
 
   "tariffs": {
