--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,8 +12,8 @@
 
   "about": {
     "title": "О нас",
-    "text1": "Ailəmnet стремится предоставить вам быстрый, надёжный и качественный интернет. Наша главная цель — чтобы клиенты могли без перебоев работать, учиться и развлекаться каждый день. Наша команда состоит из опытных специалистов, которые применяют последние технологии для обеспечения высокого уровня удовлетворённости клиентов. Благодаря высокоскоростному соединению, основанному на волоконно-оптической технологии, вы можете наслаждаться стабильным интернетом дома и на работе.",
-    "text2": "Ailəmnet — это скорость, качество и надёжность."
+    "text1": "LEOTELECOM стремится предоставить вам быстрый, надёжный и качественный интернет. Наша главная цель — чтобы клиенты могли без перебоев работать, учиться и развлекаться каждый день. Наша команда состоит из опытных специалистов, которые применяют последние технологии для обеспечения высокого уровня удовлетворённости клиентов. Благодаря высокоскоростному соединению, основанному на волоконно-оптической технологии, вы можете наслаждаться стабильным интернетом дома и на работе.",
+    "text2": "LEOTELECOM — это скорость, качество и надёжность."
   },
 
   "tariffs": {
